# dupeclean

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  README.zh-CN.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  publish.yml
docs/: TECHNICAL.md
src/dupeclean/: __init__.py  __main__.py  action_defs.py  action_executor.py  age.py  analyzer.py  analyzer_v2.py  annotations.py  api.py  archiver.py  batch.py  batch_ops.py  benchmark.py  cache.py  cas.py  categories.py  categorizer.py  checksums.py  cleanup.py  cleanup_actions.py  cleanup_analyzer.py  cleanup_config.py  cleanup_config_v2.py  cleanup_history_v2.py  cleanup_monitor.py  cleanup_optimizer.py  cleanup_orchestrator.py  cleanup_pipeline.py  cleanup_progress.py  cleanup_progress_v2.py  cleanup_queue.py  cleanup_queue_v2.py  cleanup_report.py  cleanup_report_v2.py  cleanup_schedule.py  cleanup_schedule_v2.py  cleanup_summary.py  cleanup_validator.py  cleanup_verify.py  cleanup_workflow.py  (+194 more)
src/dupeclean/static/: dashboard.html
src/dupeclean/tui/: __init__.py  app.py  themes.py
src/dupeclean/tui/screens/: __init__.py  browse.py  cleanup_wizard.py  duplicates.py  help.py  main.py  stats.py  treemap.py
tests/: conftest.py  test_action_defs.py  test_action_executor.py  test_age.py  test_analyzer.py  test_analyzer_v2.py  test_annotations.py  test_api.py  test_archiver.py  test_batch.py  test_batch_ops.py  test_benchmark.py  test_cache.py  test_cas.py  test_categories.py  test_categorizer.py  test_checksums.py  test_cleanup.py  test_cleanup_actions.py  test_cleanup_analyzer.py  test_cleanup_config.py  test_cleanup_config_v2.py  test_cleanup_history_v2.py  test_cleanup_monitor.py  test_cleanup_optimizer.py  test_cleanup_orchestrator.py  test_cleanup_pipeline.py  test_cleanup_progress.py  test_cleanup_progress_v2.py  test_cleanup_queue.py  test_cleanup_queue_v2.py  test_cleanup_report.py  test_cleanup_report_v2.py  test_cleanup_schedule.py  test_cleanup_schedule_v2.py  test_cleanup_summary.py  test_cleanup_validator.py  test_cleanup_verify.py  test_cleanup_workflow.py  test_cli.py  (+193 more)
(+3 files in other folders)
