[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dupeclean"
version = "0.1.0"
description = "Smart disk analyzer & duplicate file finder with a modern TUI"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "DupeClean Contributors" },
]
keywords = ["disk", "duplicate", "analyzer", "tui", "cleanup", "dedup"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Filesystems",
    "Topic :: Utilities",
]
dependencies = [
    "textual>=1.0.0",
    "rich>=13.0.0",
    "xxhash>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.4.0",
    "mypy>=1.0.0",
]

[project.scripts]
dupeclean = "dupeclean.cli:main"
dc = "dupeclean.cli:main"

[project.urls]
Homepage = "https://github.com/user/dupeclean"
Repository = "https://github.com/user/dupeclean"
Issues = "https://github.com/user/dupeclean/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/dupeclean"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "RUF"]
ignore = ["RUF012"]  # Mutable class defaults are fine for Textual widgets

[tool.ruff.lint.per-file-ignores]
"src/dupeclean/report.py" = ["E501"]  # HTML templates have long lines
"src/dupeclean/tui/**/*.py" = ["E501"]  # TUI Rich markup strings
"tests/**/*.py" = ["E501", "RUF001"]  # Test fixtures, emoji in test data

[tool.mypy]
python_version = "3.10"
